--- a/front/src/components/Card.scss
+++ b/front/src/components/Card.scss
@@ -39,7 +39,7 @@
     margin: 0;
     
     &:hover {
-      box-shadow: 3px 3px 18px #f2826d;
+      box-shadow: 3px 3px 18px #f6d7d1;
     }
     
     h2 {
