--- a/front/src/pages/Home/Home.module.css
+++ b/front/src/pages/Home/Home.module.css
@@ -1,5 +1,5 @@
 .homeContainer {
-  padding-top: 120px; /* O un poco más si querés espacio */
+  padding-top: 60rem; /* O un poco más si querés espacio */
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 40px;
