fecha de creacion del reporte con metodo substring para recortar caracteres

--- a/front/src/components/ReportModal.scss
+++ b/front/src/components/ReportModal.scss
@@ -36,9 +36,9 @@
     }
   }
   
-  h3 {
+  h3, h2 {
     margin-bottom: 1.5rem;
-    color: #2a2a2a;
+    color: #085baf;
     font-size: 1.4rem;
     font-weight: 600;
   }
@@ -50,7 +50,7 @@
   
     label {
       font-weight: 600;
-      color: #2a2a2a;
+      color: #085baf;
       margin-bottom: 0.5rem;
     }
   
