--- a/front/src/NavBar/NavBar.scss
+++ b/front/src/NavBar/NavBar.scss
@@ -3,17 +3,18 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 100px;
+  height: 70px; 
   background-color: rgb(80, 80, 247);
   color: whitesmoke;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 1rem;
+ padding-bottom: 1rem;
+ padding-top: 1rem;
+ 
   box-sizing: border-box;
   z-index: 1000;
   font-family: Arial, sans-serif;
-  
 }
 
 .NavBar_logo {
