--- a/front/src/components/Card.scss
+++ b/front/src/components/Card.scss
@@ -68,7 +68,7 @@
   
       .tag {
         display: inline-block;
-        background: #ccdff7;
+        background: #dbe7f5;
         color: rgb(28, 28, 28);
         padding: 0.2rem 0.5rem;
         margin-right: 0.4rem;
