puse estilo al boton guardar ruta

--- a/front/src/styles/rutas.scss
+++ b/front/src/styles/rutas.scss
@@ -59,7 +59,10 @@ form textarea {
   }
 
   .card-children {
-    margin-top: 1rem;
+     margin-top: 1rem;
+     display: flex;
+     gap: 0.75rem;
+     justify-content: center;
   }
 
   &:hover {
