--- a/front/src/pages/Login/Login.scss
+++ b/front/src/pages/Login/Login.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row; // Imagen a la izquierda
   height: 100vh;
-
+  padding-top: 250px;
   font-family: 'Inter', sans-serif;
 
   .login-image-container {
