--- a/front/src/components/NavBar/NavBar.scss
+++ b/front/src/components/NavBar/NavBar.scss
@@ -30,6 +30,11 @@
   border: none;
   cursor: pointer;
   color: whitesmoke;
+  font-size: 1.5rem;
+  margin-left: auto;
+  margin-right: 2rem;
+  
+ 
 }
 
 /* Menú desktop */
@@ -81,7 +86,7 @@
 }
 
 /* Responsive */
-@media (max-width: 550px) {
+@media (max-width: 700px) {
   .IconMenuMovil {
     display: block;
     order: 2;
