ajustes de estilos en reportes y login (responsive)

--- a/front/src/components/NavBar/NavBar.scss
+++ b/front/src/components/NavBar/NavBar.scss
@@ -14,7 +14,7 @@
  
   box-sizing: border-box;
   z-index: 1000;
-  font-family: Arial, sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 .NavBar_logo {
