--- a/front/src/pages/Home/Home.module.css
+++ b/front/src/pages/Home/Home.module.css
@@ -4,7 +4,7 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 10rem;
-  font-family: Arial, sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 
