--- a/front/src/pages/Login/Login.scss
+++ b/front/src/pages/Login/Login.scss
@@ -1,10 +1,11 @@
 
+
 // .login-page {
 //   display: flex;
 //   flex-direction: row;
 //   width: 100%;
 //   height: 100vh;
-//   padding-top: 25rem; 
+//   padding-top: 25rem; // compensación por navbar fijo
 //   font-family: 'Inter', sans-serif;
 //   overflow-x: hidden;
 
@@ -46,22 +47,21 @@
 //         color: #2a2a2a;
 //       }
 
-//       input {
+//       input,
+//       button {
 //         width: 100%;
 //         padding: 0.75rem 1rem;
 //         border-radius: 6px;
 //         border: 1px solid #ccc;
 //         font-size: 1rem;
+//         box-sizing: border-box;
 //       }
 
 //       button {
-//         width: 100%;
 //         margin-top: 1rem;
-//         padding: 0.75rem 1rem;
 //         background-color: #3082e3;
 //         color: white;
 //         border: none;
-//         border-radius: 6px;
 //         font-weight: bold;
 //         cursor: pointer;
 //         transition: background-color 0.3s ease;
@@ -94,7 +94,7 @@
 //       padding-top: 2rem;
 //       padding-bottom: 4rem;
 //       display: flex;
-//     flex-direction: column;
+//       flex-direction: column;
 //       align-items: center;
 //       justify-content: center;
 
@@ -111,7 +111,6 @@
 //     }
 //   }
 // }
-
 .login-page {
   display: flex;
   flex-direction: row;
@@ -153,14 +152,17 @@
       max-width: 400px;
       gap: 1rem;
 
+      > div {
+        width: 100%;
+      }
+
       label {
         align-self: flex-start;
         font-weight: 500;
         color: #2a2a2a;
       }
 
-      input,
-      button {
+      input {
         width: 100%;
         padding: 0.75rem 1rem;
         border-radius: 6px;
@@ -170,12 +172,16 @@
       }
 
       button {
+        width: 100%;
         margin-top: 1rem;
+        padding: 0.75rem 1rem;
         background-color: #3082e3;
         color: white;
-        border: none;
+        border: 1px solid transparent; /* iguala borde invisible */
+        border-radius: 6px;
         font-weight: bold;
         cursor: pointer;
+        box-sizing: border-box; /* igual cálculo de ancho */
         transition: background-color 0.3s ease;
 
         &:hover {
