--- a/front/src/styles/rutas.scss
+++ b/front/src/styles/rutas.scss
@@ -9,6 +9,18 @@
   padding: 6rem 1.5rem 3rem; // arriba, laterales, abajo
   font-family: Arial, sans-serif;
   padding-top: 20rem;
+
+  @media (max-width: 601px) {
+    padding-top: 60rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  @media (max-width: 480px) {
+    padding-top: 70rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
 }
 
 form input,
