--- a/front/src/styles/home.scss
+++ b/front/src/styles/home.scss
@@ -5,11 +5,7 @@ $color-accent: #ff6f61; // coral
 $color-text: #333;
 
 .home-container {
- /* padding: 2rem;
-  background-color: $color-bg;
-  font-family: 'Segoe UI', sans-serif;
-  color: $color-text;*/
-  max-width: 900px; // Podés subirlo hasta 1100 si querés más ancho
+  max-width: 900px; 
   margin: 0 auto;
   padding: 2rem;
   background-color: $color-bg; 
