--- a/front/src/styles/rutas.scss
+++ b/front/src/styles/rutas.scss
@@ -1,12 +1,7 @@
 .page-container {
- /* padding-top: 40rem; 
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 40px;
-  font-family: Arial, sans-serif;*/
-    max-width: 1200px;
+   max-width: 1200px;
   margin: 0 auto;
-  padding: 6rem 1.5rem 3rem; // arriba, laterales, abajo
+  padding: 6rem 1.5rem 3rem; 
   font-family: Arial, sans-serif;
   padding-top: 20rem;
 
