--- a/front/src/pages/Login/Login.scss
+++ b/front/src/pages/Login/Login.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   width: 100%;
   height: 100vh;
-  padding-top: 25rem; // compensación por navbar fijo
+  padding-top: 25rem; 
   font-family: 'Inter', sans-serif;
   overflow-x: hidden;
 
