--- a/front/src/components/Card/Card.scss
+++ b/front/src/components/Card/Card.scss
@@ -35,7 +35,7 @@
     flex-direction: column;
     justify-content: space-between;
     transition: box-shadow 0.3s ease;
-    max-width: none; /* que ocupe el grid */
+    max-width: none; 
     margin: 0;
     
     &:hover {
