--- a/front/src/pages/Home/Home.module.css
+++ b/front/src/pages/Home/Home.module.css
@@ -257,7 +257,7 @@ footer {
   margin-top: 2px;
 }
 
-
+/*
 .hero {
   position: relative;
   background: linear-gradient(to bottom right, #3c73e8, #5672ff);
@@ -312,7 +312,114 @@ footer {
   max-width: 300px;
   z-index: 2;
 }
+*/
 
+.descargaApp {
+  /*position: relative;
+  background: linear-gradient(to right, #4a6cf7, #5c8dfc);
+  padding: 4rem 1rem;
+  overflow: hidden;
+  text-align: center;*/
+  position: relative;
+  background: #4a6cf7;
+  overflow: hidden;
+  padding: 6rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.curvaSuperior svg,
+.curvaInferior svg {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.curvaSuperior {
+ /* position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background-color: white;
+  border-radius: 0 0 60px 60px;
+  z-index: 1;*/
+   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.curvaInferior {
+ /* margin-top: 4rem;*/
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.contenidoApp {
+ /* position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+  flex-wrap: wrap;
+  text-align: left;
+  padding: 2rem;*/
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 4rem 1rem;
+  z-index: 2;
+  position: relative;
+   
+}
+
+
+.textoApp h2 {
+  font-size: 2.4rem;
+  margin-bottom: 1rem;
+}
+
+.textoApp {
+  color: white;
+  max-width: 400px;
+}
+
+.textoApp h2 {
+  font-size: 2.4rem;
+  margin-bottom: 1rem;
+}
+
+.textoApp p {
+  font-size: 1.1rem;
+  margin-bottom: 1.5rem;
+}
+
+.botones button {
+  margin-right: 1rem;
+  padding: 0.7rem 1.5rem;
+  background-color: white;
+  border: none;
+  border-radius: 12px;
+  color: #4a6cf7;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.botones button:hover {
+  background-color: #f1f1f1;
+}
+
+.mockupApp img {
+  max-width: 280px;
+}
 
 /*seccion beneficios*/
 .beneficios {
