--- a/front/src/components/Card/Card.scss
+++ b/front/src/components/Card/Card.scss
@@ -84,6 +84,13 @@
         gap: 0.75rem;
     }
   }
+  .card-image {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+  }
   
   @media (max-width: 480px) {
     .card {
