--- a/front/src/pages/Reports.jsx/Reports.scss
+++ b/front/src/pages/Reports.jsx/Reports.scss
@@ -1,9 +1,5 @@
 .reports-page {
-  padding-top: 80rem; 
-  padding-left: 2rem;
-  padding-right: 2rem;
-  max-width: 1200px;
-  margin: 0 auto;
+  padding-top: 75rem;
   box-sizing: border-box;
   min-height: 100vh;
   background-color: #f7f9fc;
@@ -12,15 +8,22 @@
   font-family: 'Inter', sans-serif;
 
   @media (max-width: 601px) {
-    padding-top: 65rem;
+    padding-top: 224rem;
     padding-left: 1rem;
     padding-right: 1rem;
   }
 
   @media (max-width: 480px) {
-    padding-top: 110rem;
+   padding-top: 224rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+    .report-title {
+      padding-top: 7rem;
+      margin: 0 0 1rem 0;
+      font-size: 2rem;
+      color: #2a2a2a;
+      font-weight: 700;
+    }
   }
 }
 
@@ -28,11 +31,15 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 6rem 1.5rem 3rem; 
+  margin: 0 auto;
 }
 
 
 .report-title {
-  margin: 0 0 1rem 0;
+ 
   font-size: 2rem;
   color: #2a2a2a;
   font-weight: 700;
@@ -102,7 +109,7 @@ select {
   font-size: 1rem;
 }
 
-/* Cards grid */
+
 .card-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -110,7 +117,7 @@ select {
   margin-top: 2rem;
 }
 
-/* Autocompletado de búsqueda */
+//autocompletado de busqueda
 .autocomplete-suggestions {
   display: flex;
   flex-wrap: wrap;
@@ -136,7 +143,7 @@ select {
   }
 }
 
-/* Botones de paginación */
+//botones paginado
 .pagination-controls {
   margin-top: 1.5rem;
   display: flex;
