--- a/front/src/pages/Home/Home.module.css
+++ b/front/src/pages/Home/Home.module.css
@@ -1,12 +1,12 @@
 body {
   font-family: 'Inter', sans-serif;
-  background-color: #f9f9f9;
+  background-color: white;
 }
 
 
 
 .homeContainer {
-  padding-top: 220rem; 
+  padding-top: 208rem; 
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 10rem;
@@ -17,7 +17,7 @@ body {
 .titulo2, .titulo3 {
   background: none;
   color: #1e1e1e;
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   text-align: center;
   margin: 40px 0 20px;
   padding: 0;
@@ -132,7 +132,8 @@ body {
 
 
 .cardsSection {
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
+ 
 }
 
 .cardsContainer {
@@ -336,6 +337,7 @@ footer {
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 2rem;
   justify-items: center;
+  padding-top: 2rem;
 }
 
 .beneficioItem {
@@ -418,7 +420,7 @@ footer {
 
 @media (max-width: 480px) {
   .homeContainer {
-    padding-top: 550rem;
+    padding-top: 520rem;
   }
   .beneficios {
     padding-top: 0;
