tartando de sacar el margen superior de reportes

--- a/front/src/pages/ReportDetails/reportDetails.scss
+++ b/front/src/pages/ReportDetails/reportDetails.scss
@@ -1,7 +1,10 @@
 .report-details-card {
     max-width: 500px;
-    margin: 2rem auto;
-    padding: 1.5rem;
+  /*  margin: 1rem auto;
+    padding-top: 0;*/
+      margin: 0 auto !important;
+  /*padding: 6rem 1.5rem 3rem; */
+
     
     background: #fff;
     border-radius: 12px;
