--- a/front/src/styles/home.scss
+++ b/front/src/styles/home.scss
@@ -1,7 +1,7 @@
 $color-bg: #cfdbf7;
 $color-primary: #0077b6;
 $color-secondary: #023e8a;
-$color-accent: #ff6f61; // coral
+$color-accent: #ff6f61; 
 $color-text: #333;
 
 .home-container {
