--- a/front/src/pages/ReportDetails/reportDetails.scss
+++ b/front/src/pages/ReportDetails/reportDetails.scss
@@ -1,7 +1,6 @@
 .report-details-card {
-    max-width: 500px;
-  /*  margin: 1rem auto;
-    padding-top: 0;*/
+    max-width: 550px;
+  padding-top: 10rem;
       margin: 0 auto !important;
   /*padding: 6rem 1.5rem 3rem; */
 
